--- a/src/App.css
+++ b/src/App.css
@@ -9,15 +9,17 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: #262834;
 }
 
 .container {
+  height: 400px;
   top: 50%;
   left: 50%;
   position: absolute;
   transform: translate(-50%, -50%);
   margin: 0 auto;
-  width: 256px;
+  width: 300px;
   text-align: center;
   border: 10px solid #101116;
   background: #101116;
@@ -31,9 +33,51 @@ body {
 }
 
 input[type="text"] {
-  height: 75px;
-  width: 240px;
+  height: 90px;
+  width: 249px;
   background-color: #10111600;
   border: 0px;
   color: #ffffff;
+  text-align: right;
+  font-size: 25px;
+  font-weight: 500;
+  letter-spacing: 1px;
+}
+
+#clear {
+  grid-column: 1/3;
+  grid-row: 1;
+  color: #262834;
+}
+
+#result {
+  grid-column: 3/5;
+  grid-row: 5;
+  color: #262834;
+}
+
+#backspace {
+  color: #262834;
+}
+
+button {
+  color: #ffffff;
+  margin: 5px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  background: #262834;
+  font-weight: 500;
+  height: 50px;
+}
+
+input:focus,
+input:active,
+button:focus,
+button:active {
+  outline: none;
+}
+
+.highlight {
+  background-color: #56cbdb;
 }
